--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                   <option value="unicode" selected="selected">Unicode</option>
                 </select></p>
                 <hr/>
-                <p>Prefix characters: <text id="prefix" name="prefix" onchange="prefixTextChange(this);">
+                <p>Prefix characters: <input type="text" id="prefix" name="prefix" onchange="prefixTextChange(this);">
                 </p>
                 <hr/>
                 <p>Horizontal Header: <select id="horizontal_header" name="horizontalHeader" onchange="horizontalHeaderSelectChange(this);">
