--- a/index.html
+++ b/index.html
@@ -85,6 +85,8 @@
                 <hr/>
                 <p>Prefix characters: <input type="text" id="prefix" name="prefix" onchange="prefixTextChange(this);">
                 </p>
+                <p>Suffix characters: <input type="text" id="suffix" name="suffix" onchange="suffixTextChange(this);">
+                </p>
                 <hr/>
                 <p>Horizontal Header: <select id="horizontal_header" name="horizontalHeader" onchange="horizontalHeaderSelectChange(this);">
                   <option value="none">None</option>
